# auto_wash_bowls

./: .gitignore  construct_poses_data_structure.py  construct_poses_space_data.py  control_from_file.py  creat_color.py  creat_picture.py  extract_ellipse.py  extract_ellipse_copy.py  extract_ellipse_image.py  extract_ellipse_video.py  extract_jaw_image.py  ft_servo_controller.py  ft_servo_wrapper.py  ik_geometric.py  ik_iteration.py  joints.txt  joints_poses_map.json  joints_poses_map_45.json  plot_poses.py  plot_quat.py  pose_to_joints_map.json  pose_to_joints_map_0.01.json  pose_to_joints_map_all.json  pyproject.toml  readme.md  seg_bowls.py  so100_calibration copy 2.json  so100_calibration copy.json  so100_calibration.json  so100_calibration.py  so100_controller.py  so100_controller_pnc.py  so100_controller_rtb.py  so100_digital_twin.py  so100_driver.py  so100_hardware_controller.py  so100_scan_read.py  so100_sim_ros_launch.py  tmp.py
app/: arm_follow_objects.py
auto_wash_bowls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
control/: arm_controller.py  gripper_controller.py  so100_controller.py  so100_driver.py  so100_driver_node.py  test.py  test_controller.py
control/FT_servo/: ft_servo_wrapper.py
resources/: SO_5DOF_ARM100_8j_URDF.SLDASM_vscode.urdf  so100_tcp.urdf
sense/: color_extracter.py  color_extracter_node.py  config.json  ellipses_extracter_node.py  extract_ellipse_video.py  readme.md
test/: axis_angle_multify.py  matrix_caculation.py  parse_urdf.py  show_pose.py  show_pose_axis_angle.py  show_pose_euler.py
(+8 files in other folders)
